# item-from-image

./: .gitignore  README.md  pyproject.toml
app/: main.py
image-processing/: constants.py  extract_item_from_image.py  get-barcode-number.py  get_barcode_numbers.py  get_known_item_info.py  main.py
stubs/pyzbar/: pyzbar.pyi
