[project]
name = "item-from-image"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "mypy>=2.1.0",
    "opencv-python>=5.0.0.93",
    "pyzbar>=0.1.9",
]


[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.uv]
package = false

[tool.mypy]
python_version = "3.13"
mypy_path = "stubs"
