[project]
name = "item-from-image"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.34.0",
    "mypy>=2.1.0",
    "opencv-python>=5.0.0.93",
    "pyzbar>=0.1.9",
    "httpx>=0.28.1",
    "asyncio>=4.0.0",
    "requests>=2.34.2",
    "openai>=2.46.0",
]


[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.uv]
package = false

[tool.mypy]
python_version = "3.13"
mypy_path = "stubs"
